[package]
name = "xm_decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
cbc = "0.1.2"
hex = "0.4.3"
wasmer = "4.2.3"
wasmer-compiler-cranelift = "4.2.3"
bitflags = "2.0"
byteorder = "1.4"
flate2 = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
